# cofab-slicer

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  benchmark.scad  benchmark.stl  main.cpp  slicer.pro
src/: gcodedummy.h  gcodegenerator.cpp  gcodegenerator.h  gcodeviewer.cpp  gcodeviewer.h  mainwindow.cpp  mainwindow.h  model3d.cpp  model3d.h  orbitcameracontroller.cpp  orbitcameracontroller.h  sliceprocessor.cpp  sliceprocessor.h  sliceroptions.cpp  sliceroptions.h  sliceviewer.cpp  sliceviewer.h  slicewidget.cpp  slicewidget.h  stlviewer.cpp  stlviewer.h
